--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "build": "babel src --out-dir dist --source-maps inline",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.js",
+    "test": "ava --verbose"
   },
   "main": "dist/index.js",
   "author": "",
@@ -13,12 +14,30 @@
     "node": "4.4.4",
     "npm": "2.15.1"
   },
+  "ava": {
+    "files": [
+      "test/**/*.js"
+    ],
+    "source": [
+      "src/**/*.js"
+    ],
+    "concurrency": 5,
+    "failFast": true,
+    "tap": true,
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
+  },
   "devDependencies": {
+    "ava": "^0.16.0",
     "babel-cli": "^6.11.4",
+    "babel-register": "^6.11.6",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-loader": "^1.3.0",
-    "husky": "^0.11.4"
+    "husky": "^0.11.4",
+    "sinon": "^1.17.5"
   },
   "dependencies": {
     "babel-core": "^6.7.0",
