--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "build": "babel src --out-dir dist --source-maps inline",
     "lint": "eslint src/**/*.js",
-    "precommit": "npm run test && npm run lint",
+    "precommit": "npm run test && npm run lint && npm run build && git add ./dist",
     "test": "ava",
-    "test:watch": "ava --watch"
+    "test:watch": "ava --watch --verbose"
   },
   "main": "dist/index.js",
   "author": "",
