--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "main": "dist/index.js",
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "engines": {
     "node": "4.4.4",
     "npm": "2.15.1"
